--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="match_parent"
-	android:layout_width="match_parent"
-	android:orientation="vertical"
-	android:gravity="center|fill|fill_vertical|fill_horizontal"
-	android:layout_gravity="center|fill|fill_vertical|fill_horizontal">
-
 	<ScrollView
+	    xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_height="match_parent"
 		android:layout_width="match_parent"
 		android:foregroundGravity="center|fill|fill_vertical|fill_horizontal"
@@ -16,7 +9,7 @@
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:orientation="vertical"
 			android:background="@drawable/yuan"
 			android:gravity="center|fill|fill_vertical|fill_horizontal">
@@ -59,21 +52,15 @@
 			<LinearLayout
 				android:layout_height="match_parent"
 				android:layout_width="match_parent"
-				android:orientation="horizontal">
-
-				<LinearLayout
-					android:layout_height="match_parent"
-					android:layout_width="wrap_content"
-					android:orientation="vertical"
-					android:id="@+id/leftNavit"
-					android:visibility="gone">
-
+				android:orientation="vertical">
 					<ScrollView
 						android:layout_height="match_parent"
-						android:layout_width="match_parent">
+						android:id="@+id/leftNavit"
+						android:visibility="gone"
+						android:layout_width="wrap_content">
 
 						<LinearLayout
-							android:layout_height="match_parent"
+							android:layout_height="wrap_content"
 							android:layout_width="wrap_content"
 							android:orientation="vertical">
 
@@ -100,7 +87,7 @@
 								android:background="@drawable/editbag"
 								android:layout_marginTop="10dp"
 								android:id="@+id/brandBtn"/>
-
+							
 							<Button
 								android:layout_height="40dp"
 								android:text="商品管理"
@@ -120,8 +107,6 @@
 						</LinearLayout>
 
 					</ScrollView>
-
-				</LinearLayout>
 
 				<LinearLayout
 					android:layout_height="match_parent"
@@ -236,5 +221,4 @@
 
 	</ScrollView>
 
-</LinearLayout>
 
